src/test/resources/30/single/xhtml/valid/epubtype-declared-vocab.xhtml
<!DOCTYPE html>	 
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops"
  epub:prefix="my: https://example.org/vocab/#" lang="en">
  <head>
    <title>Test</title>
  </head>
  <!-- this property is part of a declared vocab -->
  <!-- 
    note: 'subchatper' is deprecated in the SSV,
          but not here as it comes from another vocab
  -->
  <body epub:type="my:subchapter">
    <h1>Test</h1>
  </body>
</html>
