src/test/resources/30/single/xhtml/invalid/entities-unknown.xhtml
<!DOCTYPE html>	 
<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
    <head>
        <title>Test</title>
    </head>
    <body>
        <!-- this entity reference uses an unknown entity name -->
        &foo; 
    </body>
</html>
